# trc

./: .gitignore  Cargo.toml  README.md  pytrc_test.py  setup.py  trcpy_test.py
pytrc/: conn.py  listener.py
pytrc_server/: Cargo.toml
pytrc_server/src/: main.rs
trace/: Cargo.toml
trace/examples/: babyrop.rs
trace/src/: debugger.rs  lib.rs  tracer.rs
trc/: Cargo.toml
trc/src/: cmd.rs  expr.rs  main.rs
trcpy/: __init__.py  conn.py  listener.py  sys.py
trcpy_server/: Cargo.toml
trcpy_server/src/: main.rs
