[package]
name = "trcpy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trace = { path = "../trace" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = "0.23.1"
base64 = "0.13.0"